2008-12-17  Pamela Greene  <pam@chromium.org>

        Reviewed by Darin Adler.
        Landed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=22577
        Add a test to ensure that checkboxes and radio buttons with duplicate
        names map to a collection.

        * fast/dom/HTMLInputElement/duplicate-element-names-expected.txt: Added.
        * fast/dom/HTMLInputElement/duplicate-element-names.html: Added.

2008-12-17  Pamela Greene  <pam@chromium.org>

        Reviewed by Darin Adler.
        Landed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=22612
        Add test to verify type enforcement in DOM setters.

        * fast/dom/setter-type-enforcement-expected.txt: Added.
        * fast/dom/setter-type-enforcement.html: Added.

2008-12-17  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

        Rubber-stamped by Timothy Hatcher.

        Fix wml/ tests, by doing s/</\&lt;/ and s/>/\&gt;/.
        Not sure why this problem wasn't visible before, something has changed.

        * wml/go-task-animation-expected.txt:
        * wml/go-task-get-method-external-deck-expected.txt:
        * wml/go-task-get-method-external-deck-with-href-expected.txt:
        * wml/go-task-get-method-same-deck-expected.txt:
        * wml/resources/go-task-animation.js:
        * wml/resources/go-task-get-method-external-deck-with-href.js:
        * wml/resources/go-task-get-method-external-deck.js:
        * wml/resources/go-task-get-method-same-deck.js:

2008-12-16  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Holger Freyther.

        Unskip some tests that pass with the Qt DRT fixed for unload event
        counting.

        * platform/qt/Skipped:

2008-12-16  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Holger Freyther.

        Added mac API specific loader test to the skip list for the Qt DRT.

        * platform/qt/Skipped:

2008-12-15  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>
